--- a/frontend/main.css
+++ b/frontend/main.css
@@ -22,6 +22,7 @@ h2 {
     font-size:20px;
     color: #000000; 
     text-align: center;
+    margin-bottom: 0;
 }
 h20 {
     font: 1.3rem 'Inconsolata', monospace;  
